# ChangeLog for dev-perl/ExtUtils-CBuilder
# Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/ExtUtils-CBuilder/ChangeLog,v 1.39 2006/10/20 19:21:29 kloeri Exp $

  20 Oct 2006; Bryan Østergaard <kloeri@gentoo.org>
  ExtUtils-CBuilder-0.18.ebuild:
  Stable on Alpha.

  16 Sep 2006; Tobias Scherbaum <dertobi123@gentoo.org>
  ExtUtils-CBuilder-0.18.ebuild:
  ppc stable

  05 Aug 2006; Michael Cummings <mcummings@gentoo.org>
  ExtUtils-CBuilder-0.12.ebuild, ExtUtils-CBuilder-0.15.ebuild,
  ExtUtils-CBuilder-0.18.ebuild:
  Adding perl dep; fixed DEPEND

  02 Jul 2006; Michael Cummings <mcummings@gentoo.org>
  ExtUtils-CBuilder-0.15.ebuild, ExtUtils-CBuilder-0.18.ebuild:
  Marking stable amd64

  29 Jun 2006; Gustavo Zacarias <gustavoz@gentoo.org>
  ExtUtils-CBuilder-0.18.ebuild:
  Stable on hppa

  12 Jun 2006; Michael Cummings <mcummings@gentoo.org>
  ExtUtils-CBuilder-0.18.ebuild:
  Actual stable mark - sorry

  12 Jun 2006; Michael Cummings <mcummings@gentoo.org> ChangeLog:
  Marking stable sparc

  28 May 2006; Bryan Østergaard <kloeri@gentoo.org>
  ExtUtils-CBuilder-0.15.ebuild:
  Stable on alpha.

  02 May 2006; Diego Pettenò <flameeyes@gentoo.org>
  ExtUtils-CBuilder-0.18.ebuild:
  Add ~x86-fbsd keyword.

*ExtUtils-CBuilder-0.18 (25 Apr 2006)

  25 Apr 2006; <mcummings@gentoo.org> +ExtUtils-CBuilder-0.18.ebuild:
  Version bump

  08 Apr 2006; <mcummings@gentoo.org> -ExtUtils-CBuilder-0.05.ebuild:
  Cleaning out old 0.05 version

  08 Apr 2006; <mcummings@gentoo.org> ExtUtils-CBuilder-0.15.ebuild:
  Marking stable mips, tested on raq2, closes bug 124850

  31 Mar 2006; Michael Hanselmann <hansmi@gentoo.org>
  ExtUtils-CBuilder-0.15.ebuild:
  Stable on ppc.

  28 Mar 2006; Aron Griffis <agriffis@gentoo.org>
  ExtUtils-CBuilder-0.15.ebuild:
  Mark 0.15 stable on ia64

  27 Mar 2006; Gustavo Zacarias <gustavoz@gentoo.org>
  ExtUtils-CBuilder-0.15.ebuild:
  Stable on hppa
