@@ -1,13 +1,13 @@
-# Copyright 1999-2006 Gentoo Foundation
+# Copyright 1999-2007 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/ExtUtils-CBuilder/ExtUtils-CBuilder-0.18.ebuild,v 1.11 2006/10/20 19:21:29 kloeri Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/ExtUtils-CBuilder/ExtUtils-CBuilder-0.18.ebuild,v 1.12 2007/01/15 17:43:45 mcummings Exp $
 
 EAPI="prefix"
 
 inherit perl-module
 
 DESCRIPTION="Compile and link C code for Perl modules"
-HOMEPAGE="http://search.cpan.org/~kwilliams/${P}/"
+HOMEPAGE="http://search.cpan.org/~kwilliams/"
 SRC_URI="mirror://cpan/authors/id/K/KW/KWILLIAMS/${P}.tar.gz"
 
 LICENSE="|| ( Artistic GPL-2 )"
@@ -17,6 +17,5 @@ IUSE=""
 
 DEPEND="dev-perl/module-build
 	dev-lang/perl"
-RDEPEND="${DEPEND}"
 
 SRC_TEST="do"
